--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -171,7 +171,16 @@ button:hover img {
   border-radius: 20px;
 }
 
-.step-bg .login-welcome {
+.title-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 10px;
+  color: #666666;
+}
+
+.login-welcome {
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
@@ -179,7 +188,7 @@ button:hover img {
   color: #ed8428;
 }
 
-.step-bg .login-welcome-details {
+.login-welcome-details {
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
