--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -265,3 +265,19 @@ button:hover img {
   line-height: 14px;
   margin-bottom: 10px;
 }
+
+.file-input {
+  background: #ffffff;
+  border-radius: 10px;
+  height: 52px;
+  width: 100%;
+  padding: 10px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+  color: #959fa9;
+  border: 1px solid rgba(220, 227, 231, 0.5);
+  margin: 10px 0;
+}
